src/objects/inscor__Owner_Group__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Owner_Group_Description__c</fullName>
        <label>Owner Group Description</label>
        <type>TextArea</type>
    </fields>
    <label>Owner Group</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Owner_Group_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Owner Group</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Owner Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>